set header fixed with scroll

--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -10,6 +10,11 @@
   font-family: "enFont";
   src: url(../Assets/Fonts/Poppins.ttf);
 }
+
+@font-face {
+  font-family: "faTitleFont";
+  src: url(../Assets/Fonts/Dastnevis.otf);
+}
 // RESET STYLES
 * {
   list-style: none;
