--- a/src/Components/Header/Navbar/Navbar.css
+++ b/src/Components/Header/Navbar/Navbar.css
@@ -5,13 +5,23 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1.5rem 0;
+  padding: 1.8rem 0;
+}
+
+.navbar-title {
+  font-family: "faTitleFont";
+  font-size: 2.2rem;
+  margin: 0;
+}
+
+.navbar-title a {
+  color: #ff014f;
 }
 
 .navbar-list {
