--- a/src/Components/Header/Navbar/Navbar.scss
+++ b/src/Components/Header/Navbar/Navbar.scss
@@ -5,9 +5,18 @@
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 0;
+  padding: 1.8rem 0;
+}
+
+.navbar-title {
+  font-family: "faTitleFont";
+  font-size: 2.2rem;
+  margin: 0;
+  a {
+    color: #ff014f;
+  }
 }
 
 // NAVBAR NAV
