--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -8,6 +8,11 @@
   src: url(../Assets/Fonts/Poppins.ttf);
 }
 
+@font-face {
+  font-family: "faTitleFont";
+  src: url(../Assets/Fonts/Dastnevis.otf);
+}
+
 * {
   list-style: none;
   text-decoration: none;
