--- a/src/Components/Header/Navbar/Navbar.css
+++ b/src/Components/Header/Navbar/Navbar.css
@@ -15,9 +15,10 @@
 }
 
 .navbar-title {
-  font-family: "faTitleFont";
-  font-size: 2.2rem;
+  font-family: "enTitleFont";
+  font-size: 2.4rem;
   margin: 0;
+  margin-bottom: 0.3em;
 }
 
 .navbar-title a {
@@ -39,15 +40,53 @@
       -ms-flex-align: start;
           align-items: flex-start;
   border-bottom: 1px solid #dce1e4;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .nav-item {
   padding: 0.6em 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .nav-link {
   font-size: 1.1rem;
   font-weight: 500;
   color: #1e2125;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+@media (min-width: 992px) {
+  .navbar-list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 0;
+    margin: 0;
+    border-bottom: 0;
+  }
+  .nav-item {
+    padding: 0 0.8em;
+  }
+  .nav-item:nth-child(1) {
+    padding-right: 0;
+  }
+  .nav-link {
+    font-size: 1.3rem;
+    font-weight: 600;
+  }
+  .current-page a {
+    color: #ff014f;
+    font-weight: 700;
+  }
+  .navbar-list:hover .nav-item:not(.current-page) a {
+    color: #9c9c9c;
+  }
+  .nav-item:not(.current-page):hover a {
+    color: #1e2125 !important;
+  }
 }
 /*# sourceMappingURL=Navbar.css.map */
