--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -12,8 +12,8 @@
 }
 
 @font-face {
-  font-family: "faTitleFont";
-  src: url(../Assets/Fonts/Dastnevis.otf);
+  font-family: "enTitleFont";
+  src: url(../Assets/Fonts/Lobster-Regular.ttf);
 }
 // RESET STYLES
 * {
