--- a/src/Components/Header/Navbar/Navbar.css
+++ b/src/Components/Header/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar-Wrapper {
-  width: 95%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   display: -webkit-box;
@@ -11,12 +11,13 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1.8rem 0;
+  padding: 1.4rem 0;
 }
 
 .navbar-title {
   font-family: "enTitleFont";
   font-size: 2.4rem;
+  font-weight: 400;
   margin: 0;
   margin-bottom: 0.3em;
 }
