--- a/src/Components/Header/Navbar/Navbar.scss
+++ b/src/Components/Header/Navbar/Navbar.scss
@@ -1,18 +1,19 @@
 @import "../../../Sass/Variables";
 
 .navbar-Wrapper {
-  width: 95%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.8rem 0;
+  padding: 1.4rem 0;
 }
 
 .navbar-title {
   font-family: "enTitleFont";
   font-size: 2.4rem;
+  font-weight: 400;
   margin: 0;
   margin-bottom: 0.3em;
   a {
