--- a/src/Sass/_Variables.scss
+++ b/src/Sass/_Variables.scss
@@ -1,3 +1,8 @@
 $backgroundColor: #ecf0f3;
 $primaryColor: #3c3e41;
+$bodyColor: #878e99;
 $secoundaryColor: #ff014f;
+
+$gradiant-box3: linear-gradient(145deg, #e2e8ec, #ffffff);
+$shadow-white3: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
+$gradiant-red-hover: linear-gradient(145deg, #ff014f, #d11414);
