--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -33,26 +33,35 @@ body {
   color: #3c3e41;
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media (min-width: 576px) {
-  .navbar-Wrapper {
+  .navbar-Wrapper,
+  .container {
     max-width: 540px;
   }
 }
 
 @media (min-width: 768px) {
-  .navbar-Wrapper {
+  .navbar-Wrapper,
+  .container {
     max-width: 720px;
   }
 }
 
 @media (min-width: 992px) {
-  .navbar-Wrapper {
+  .navbar-Wrapper,
+  .container {
     max-width: 960px;
   }
 }
 
 @media (min-width: 1200px) {
-  .navbar-Wrapper {
+  .navbar-Wrapper,
+  .container {
     max-width: 1310px;
   }
 }
