--- a/src/Routes/HomePage/Portfolio/Portfolio.css
+++ b/src/Routes/HomePage/Portfolio/Portfolio.css
@@ -1,20 +1,18 @@
-.my-skills__container {
+.portfolio__container {
   padding: 4em 0;
   border-top: 1px solid #dce1e4;
 }
 
-.my-skills__wrapper {
+.portfolio__wrapper {
   width: 100%;
   padding: 0 1.2em;
 }
 
-.my-skills__card-wrapper {
-  width: 100%;
+.portfolio-card__wrapper {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(22rem, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
   grid-gap: 1.2em;
-  margin-top: 4em;
 }
-/*# sourceMappingURL=MySkills.css.map */
+/*# sourceMappingURL=Portfolio.css.map */
