--- a/src/Routes/HomePage/Resume/Resume.css
+++ b/src/Routes/HomePage/Resume/Resume.css
@@ -7,4 +7,59 @@
   width: 100%;
   padding: 0 1.2em;
 }
+
+.resume-cuntent__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  background: linear-gradient(145deg, #e2e8ec, #ffffff);
+  -webkit-box-shadow: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
+          box-shadow: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
+  border-radius: 1rem;
+  padding: 2em 1em;
+  margin-top: 3em;
+}
+
+.resume-cuntent__box h2 {
+  font-size: 1.9rem;
+  font-weight: 600;
+  margin: 0.5em 0;
+}
+
+.resume-cuntent__box p {
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 2.6rem;
+  color: #878e99;
+  margin: 0;
+}
+
+.skills-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
 /*# sourceMappingURL=Resume.css.map */
