--- a/src/Sass/_Variables.scss
+++ b/src/Sass/_Variables.scss
@@ -2,7 +2,9 @@ $backgroundColor: #ecf0f3;
 $primaryColor: #3c3e41;
 $bodyColor: #878e99;
 $secoundaryColor: #ff014f;
+$progressbar-bg: #dce1e4;
 
 $gradiant-box3: linear-gradient(145deg, #e2e8ec, #ffffff);
 $shadow-white3: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
 $gradiant-red-hover: linear-gradient(145deg, #ff014f, #d11414);
+$progressbar-bg-gradiant: linear-gradient(145deg, #fff 0%, #ff014f 100%);
