--- a/src/Routes/HomePage/Resume/Resume.css
+++ b/src/Routes/HomePage/Resume/Resume.css
@@ -44,6 +44,19 @@
   margin: 0;
 }
 
+.resume-cuntent__box a {
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: #ff014f;
+  margin: 0.3em 0 0.8em 0;
+}
+
+.resume-cuntent__box span {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #878e99;
+}
+
 .skills-box {
   display: -webkit-box;
   display: -ms-flexbox;
