--- a/src/Routes/HomePage/Home.css
+++ b/src/Routes/HomePage/Home.css
@@ -1,1 +1,25 @@
-/* No CSS *//*# sourceMappingURL=Home.css.map */
+.contact__container,
+.blog__container {
+  padding: 4em 0;
+  border-top: 1px solid #dce1e4;
+}
+
+.about-me__wrapper,
+.blog__wrapper,
+.my-skills__wrapper,
+.portfolio__wrapper,
+.resume__wrapper,
+.contact__wrapper {
+  width: 100%;
+  padding: 1.2em;
+}
+
+.portfolio-card__wrapper,
+.blog-card__wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(22rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+  grid-gap: 1.2em;
+}
+/*# sourceMappingURL=Home.css.map */
