--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -27,6 +27,10 @@
           box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "faFont", "enFont";
   background: #ecf0f3;
