--- a/src/Routes/HomePage/Home.scss
+++ b/src/Routes/HomePage/Home.scss
@@ -1,5 +1,6 @@
 .contact__container,
-.blog__container {
+.blog__container,
+.portfolio__container {
   padding: 4em 0;
   border-top: 1px solid #dce1e4;
 }
@@ -17,6 +18,6 @@
 .portfolio-card__wrapper,
 .blog-card__wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
   grid-gap: 1.2em;
 }
