--- a/src/Sass/index.scss
+++ b/src/Sass/index.scss
@@ -34,6 +34,10 @@ html {
   scroll-behavior: smooth;
 }
 
+#root {
+  overflow: hidden;
+}
+
 body {
   font-family: "faFont", "enFont";
   background: $backgroundColor;
