--- a/src/Routes/HomePage/AboutMe/AboutMe.scss
+++ b/src/Routes/HomePage/AboutMe/AboutMe.scss
@@ -57,3 +57,12 @@
   color: $bodyColor;
   margin-bottom: 2em;
 }
+
+@media (min-width: 375px) {
+  .about-cuntent__title {
+    font-size: 1.6rem;
+  }
+  .about-cuntent__txt {
+    font-size: 1.3rem;
+  }
+}
