--- a/src/Routes/HomePage/Home.css
+++ b/src/Routes/HomePage/Home.css
@@ -23,4 +23,12 @@
       grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
   grid-gap: 1.2em;
 }
+
+@media (min-width: 375px) {
+  .portfolio-card__wrapper,
+  .blog-card__wrapper {
+    -ms-grid-columns: (minmax(20rem, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  }
+}
 /*# sourceMappingURL=Home.css.map */
