--- a/src/Routes/HomePage/MySkills/MySkills.scss
+++ b/src/Routes/HomePage/MySkills/MySkills.scss
@@ -10,3 +10,9 @@
   grid-gap: 1.2em;
   margin-top: 4em;
 }
+
+@media (min-width: 375px) {
+  .my-skills__card-wrapper {
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  }
+}
