--- a/src/Routes/HomePage/Home.scss
+++ b/src/Routes/HomePage/Home.scss
@@ -28,3 +28,55 @@
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   }
 }
+
+@media (min-width: 576px) {
+  .about-me__wrapper,
+  .blog__wrapper,
+  .my-skills__wrapper,
+  .portfolio__wrapper,
+  .resume__wrapper,
+  .contact__wrapper {
+    width: 100%;
+    padding: 0;
+  }
+  .portfolio-card__wrapper,
+  .blog-card__wrapper {
+    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+  }
+}
+
+@media (min-width: 992px) {
+  .portfolio-card__wrapper,
+  .blog-card__wrapper {
+    grid-gap: 2.4em;
+  }
+}
+
+@media (min-width: 1200px) {
+  .portfolio-card__wrapper,
+  .blog-card__wrapper {
+    grid-gap: 1.8em;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1024px) {
+  .about-me__wrapper,
+  .blog__wrapper,
+  .my-skills__wrapper,
+  .portfolio__wrapper,
+  .resume__wrapper,
+  .contact__wrapper {
+    padding: 0 1.2em;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1366px) {
+  .about-me__wrapper,
+  .blog__wrapper,
+  .my-skills__wrapper,
+  .portfolio__wrapper,
+  .resume__wrapper,
+  .contact__wrapper {
+    padding: 0 1.2em;
+  }
+}
