--- a/src/Routes/HomePage/MySkills/MySkills.scss
+++ b/src/Routes/HomePage/MySkills/MySkills.scss
@@ -16,3 +16,15 @@
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   }
 }
+
+@media (min-width: 576px) {
+  .my-skills__card-wrapper {
+    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+  }
+}
+
+@media (min-width: 992px) {
+  .my-skills__card-wrapper {
+    grid-gap: 2.4em;
+  }
+}
