--- a/src/Sass/index.css
+++ b/src/Sass/index.css
@@ -41,6 +41,11 @@ body {
   color: #3c3e41;
 }
 
+main {
+  position: relative;
+  width: 100%;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
