--- a/src/Components/Header/Navbar/Navbar.css
+++ b/src/Components/Header/Navbar/Navbar.css
@@ -11,7 +11,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1.4rem 0;
+  padding: 1.8rem 0;
 }
 
 @media (min-width: 576px) {
@@ -33,15 +33,19 @@
 }
 
 .navbar-title {
-  font-family: "enTitleFont";
-  font-size: 2.4rem;
-  font-weight: 400;
-  margin: 0;
-  margin-bottom: 0.3em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.navbar-title a {
-  color: #ff014f;
+.navbar-title img {
+  width: 100%;
 }
 
 .navbar-list {
@@ -70,7 +74,7 @@
 }
 
 .nav-link {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   font-weight: 500;
   color: #1e2125;
   -webkit-transition: all 0.5s ease;
